<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_5sdp"
    android:scrollbars="none"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context="com.appdorms.absensi.FirstFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:id="@+id/Greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_pagi"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:layout_below="@id/Greeting"/>

        <TextView
            android:id="@+id/desc_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/lokasi_anda_saat_ini"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@id/Name"
            />

        <ImageView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_history"
            android:contentDescription="@string/location"
            android:background="@drawable/background"
            android:layout_below="@id/desc_loc"/>

        <Button
            android:id="@+id/btn_check_in"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@id/Location"
            android:text="@string/check_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            android:background="@drawable/background"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@color/primary"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/header_recap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_below="@id/btn_check_in"
            android:text="Rekap Absensi Bulan Ini"
            android:textColor="@color/header1"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/recap_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_16sdp"
            android:layout_below="@id/header_recap">

            <TextView
                android:id="@+id/box1"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/background"
                android:backgroundTint="@color/primary_text"
                android:backgroundTintMode="multiply"
                android:text="@string/alfa"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/box2"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/background"
                android:backgroundTint="@color/primary_dark"
                android:backgroundTintMode="multiply"
                android:text="@string/alfa"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/box3"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/background"
                android:backgroundTint="@color/primary"
                android:backgroundTintMode="multiply"
                android:text="@string/alfa"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/header_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@id/recap_box"
            android:text="@string/menu"
            android:textColor="@color/header1"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/header_menu">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="@drawable/background"
                android:foregroundTint="@color/input_background"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context="com.appdorms.absensi.styling.NameFragment">

                <!-- TODO: Update blank fragment layout -->

                <TextView
                    android:id="@+id/menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/setup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_below="@+id/menu1"
                    android:text="@string/description_of_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/more1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text=">"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="@drawable/background"
                android:foregroundTint="@color/input_background"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context="com.appdorms.absensi.styling.NameFragment">

                <TextView
                    android:id="@+id/menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/setup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_below="@+id/menu2"
                    android:text="@string/description_of_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/more2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text=">"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </RelativeLayout>

</ScrollView>