<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_5sdp"
    android:scrollbars="none"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".ThirdFragment">

    <TextView
        android:id="@+id/Greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Greeting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/name"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_profile"
                android:background="@drawable/oval_shape"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000-0000-000-0000"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="@drawable/background"
                android:foregroundTint="@color/input_background"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context=".styling.NameFragment">

                <!-- TODO: Update blank fragment layout -->

                <TextView
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/setup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_below="@+id/menu1"
                    android:text="@string/description_of_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text=">"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keamanan"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="@drawable/background"
                android:foregroundTint="@color/input_background"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context=".styling.NameFragment">

                <!-- TODO: Update blank fragment layout -->

                <TextView
                    android:id="@+id/menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/setup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_below="@+id/menu1"
                    android:text="@string/description_of_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/more1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text=">"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />


            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Face Recognation"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="@drawable/background"
                android:foregroundTint="@color/input_background"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context=".styling.NameFragment">

                <!-- TODO: Update blank fragment layout -->

                <TextView
                    android:id="@+id/menu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/setup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_menu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_below="@+id/menu1"
                    android:text="@string/description_of_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/more3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text=">"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />


            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tentang"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="@drawable/background"
                android:foregroundTint="@color/input_background"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context=".styling.NameFragment">

                <TextView
                    android:id="@+id/menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/setup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_below="@+id/menu2"
                    android:text="@string/description_of_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/more2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text=">"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>